[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interface/HeadlinerNo45-59y8.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interface/PauseUIScript.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 46
extra_spacing_char = 3
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 100

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.18079
margin_top = -0.552554
margin_right = -3.18079
margin_bottom = -0.552551
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Panel" parent="Pause"]
margin_left = 255.58
margin_top = 150.0
margin_right = 767.58
margin_bottom = 450.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Pause/Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 146.489
margin_right = 32.0
margin_bottom = 166.489
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGameButton" type="Button" parent="Pause/Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -38.5
margin_top = 226.93
margin_right = 38.5
margin_bottom = 246.93
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleButton" type="Button" parent="Pause/Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -43.5
margin_top = 186.816
margin_right = 43.5
margin_bottom = 206.816
text = "Title Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuTitle" type="Label" parent="Pause/Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -53.5
margin_top = 64.2172
margin_right = 53.5
margin_bottom = 111.217
custom_fonts/font = SubResource( 1 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Pause/Menu/ResumeButton" to="Pause" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Pause/Menu/ExitGameButton" to="Pause" method="_on_ExitGameButton_pressed"]
[connection signal="pressed" from="Pause/Menu/TitleButton" to="Pause" method="_on_ReturnToTitleButton_pressed"]
